parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     expression -> FOR expression SEPARATOR expression SEPARATOR expression DO expression
Rule 2     assign_list -> IDENTIFIER ASSIGN expression
Rule 3     assign_list -> assign_list COMMA IDENTIFIER ASSIGN expression
Rule 4     expression -> PROC LPAREN identifier_list RPAREN identifier_list ARROW expression
Rule 5     expression -> WHILE expression DO expression
Rule 6     expression -> expression LESS_THEN expression
Rule 7     expression -> expression GREATER_THEN expression
Rule 8     expression -> expression LESS_EQUALS expression
Rule 9     expression -> expression GREATER_EQUALS expression
Rule 10    expression -> expression EQUALS expression
Rule 11    expression -> expression NOT_EQUALS expression
Rule 12    program -> expression
Rule 13    expression -> NUMBER
Rule 14    expression -> FLOAT
Rule 15    expression -> CHAR
Rule 16    expression -> STRING
Rule 17    identifier_list -> IDENTIFIER
Rule 18    identifier_list -> IDENTIFIER COMMA identifier_list
Rule 19    expression -> LOOP expression DO expression
Rule 20    expression -> PROC LPAREN RPAREN identifier_list ARROW expression
Rule 21    expression -> BEGIN body END
Rule 22    expression -> IDENTIFIER
Rule 23    expression -> NOT expression
Rule 24    expression -> IF expression THEN expression
Rule 25    expression_list -> expression
Rule 26    expression_list -> expression COMMA expression_list
Rule 27    expression -> PROC LPAREN identifier_list RPAREN ARROW expression
Rule 28    body -> expression
Rule 29    body -> body SEPARATOR expression
Rule 30    expression -> MINUS expression
Rule 31    expression -> IDENTIFIER ASSIGN expression
Rule 32    expression -> expression AND expression
Rule 33    expression -> expression NAND expression
Rule 34    expression -> expression OR expression
Rule 35    expression -> expression NOR expression
Rule 36    expression -> expression XOR expression
Rule 37    expression -> expression EQ expression
Rule 38    expression -> expression NEQ expression
Rule 39    expression -> expression IMPL expression
Rule 40    expression -> IF expression THEN expression ELSE expression
Rule 41    expression -> LOCAL assign_list IN expression
Rule 42    expression -> LOCK identifier_list IN expression
Rule 43    dots -> DOT
Rule 44    dots -> dots DOT
Rule 45    expression -> LIST LPAREN expression_list RPAREN
Rule 46    expression -> LAMBDA LPAREN RPAREN ARROW expression
Rule 47    expression -> LAMBDA identifier_list ARROW expression
Rule 48    expression -> LAMBDA LPAREN identifier_list RPAREN ARROW expression
Rule 49    expression -> PROC LPAREN RPAREN ARROW expression
Rule 50    expression -> expression PLUS expression
Rule 51    expression -> expression MINUS expression
Rule 52    expression -> expression TIMES expression
Rule 53    expression -> expression DIVIDE expression
Rule 54    expression -> LOCALREC assign_list IN expression
Rule 55    expression -> LIST LPAREN RPAREN
Rule 56    struct_body -> IDENTIFIER ASSIGN expression
Rule 57    struct_body -> struct_body SEPARATOR IDENTIFIER ASSIGN expression
Rule 58    expression -> LBRACKET expression_list RBRACKET
Rule 59    expression -> ARRAY LPAREN expression_list RPAREN
Rule 60    expression -> LPAREN expression RPAREN
Rule 61    expression -> TRUE
Rule 62    expression -> FALSE
Rule 63    expression -> STRUCT BEGIN struct_body END
Rule 64    expression -> LAMBDA ARROW expression
Rule 65    expression -> LBRACKET RBRACKET
Rule 66    expression -> ARRAY LPAREN RPAREN
Rule 67    expression -> expression dots IDENTIFIER
Rule 68    expression -> expression LPAREN expression_list RPAREN
Rule 69    expression -> dots IDENTIFIER
Rule 70    expression -> IDENTIFIER LBRACKET expression RBRACKET
Rule 71    expression -> expression LPAREN RPAREN
Rule 72    expression -> EXTEND expression BEGIN struct_body END

Terminals, with rules where they appear

AND                  : 32
ARRAY                : 59 66
ARROW                : 4 20 27 46 47 48 49 64
ASSIGN               : 2 3 31 56 57
BEGIN                : 21 63 72
CHAR                 : 15
COMMA                : 3 18 26
DIVIDE               : 53
DO                   : 1 5 19
DOT                  : 43 44
ELSE                 : 40
END                  : 21 63 72
EQ                   : 37
EQUALS               : 10
EXTEND               : 72
FALSE                : 62
FLOAT                : 14
FOR                  : 1
GREATER_EQUALS       : 9
GREATER_THEN         : 7
IDENTIFIER           : 2 3 17 18 22 31 56 57 67 69 70
IF                   : 24 40
IMPL                 : 39
IN                   : 41 42 54
LAMBDA               : 46 47 48 64
LBRACKET             : 58 65 70
LESS_EQUALS          : 8
LESS_THEN            : 6
LIST                 : 45 55
LOCAL                : 41
LOCALREC             : 54
LOCK                 : 42
LOOP                 : 19
LPAREN               : 4 20 27 45 46 48 49 55 59 60 66 68 71
MINUS                : 30 51
NAND                 : 33
NEQ                  : 38
NOR                  : 35
NOT                  : 23
NOT_EQUALS           : 11
NUMBER               : 13
OR                   : 34
PLUS                 : 50
PROC                 : 4 20 27 49
RBRACKET             : 58 65 70
RPAREN               : 4 20 27 45 46 48 49 55 59 60 66 68 71
SEPARATOR            : 1 1 29 57
STRING               : 16
STRUCT               : 63
THEN                 : 24 40
TIMES                : 52
TRUE                 : 61
WHILE                : 5
XOR                  : 36
error                : 

Nonterminals, with rules where they appear

assign_list          : 3 41 54
body                 : 21 29
dots                 : 44 67 69
expression           : 1 1 1 1 2 3 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 19 19 20 23 24 24 25 26 27 28 29 30 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 40 41 42 46 47 48 49 50 50 51 51 52 52 53 53 54 56 57 60 64 67 68 70 71 72
expression_list      : 26 45 58 59 68
identifier_list      : 4 4 18 20 27 42 47 48
program              : 0
struct_body          : 57 63 72

Parsing method: LALR

state 0

    (0) S' -> . program
    (12) program -> . expression
    (1) expression -> . FOR expression SEPARATOR expression SEPARATOR expression DO expression
    (4) expression -> . PROC LPAREN identifier_list RPAREN identifier_list ARROW expression
    (5) expression -> . WHILE expression DO expression
    (6) expression -> . expression LESS_THEN expression
    (7) expression -> . expression GREATER_THEN expression
    (8) expression -> . expression LESS_EQUALS expression
    (9) expression -> . expression GREATER_EQUALS expression
    (10) expression -> . expression EQUALS expression
    (11) expression -> . expression NOT_EQUALS expression
    (13) expression -> . NUMBER
    (14) expression -> . FLOAT
    (15) expression -> . CHAR
    (16) expression -> . STRING
    (19) expression -> . LOOP expression DO expression
    (20) expression -> . PROC LPAREN RPAREN identifier_list ARROW expression
    (21) expression -> . BEGIN body END
    (22) expression -> . IDENTIFIER
    (23) expression -> . NOT expression
    (24) expression -> . IF expression THEN expression
    (27) expression -> . PROC LPAREN identifier_list RPAREN ARROW expression
    (30) expression -> . MINUS expression
    (31) expression -> . IDENTIFIER ASSIGN expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression NAND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression NOR expression
    (36) expression -> . expression XOR expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . expression IMPL expression
    (40) expression -> . IF expression THEN expression ELSE expression
    (41) expression -> . LOCAL assign_list IN expression
    (42) expression -> . LOCK identifier_list IN expression
    (45) expression -> . LIST LPAREN expression_list RPAREN
    (46) expression -> . LAMBDA LPAREN RPAREN ARROW expression
    (47) expression -> . LAMBDA identifier_list ARROW expression
    (48) expression -> . LAMBDA LPAREN identifier_list RPAREN ARROW expression
    (49) expression -> . PROC LPAREN RPAREN ARROW expression
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression TIMES expression
    (53) expression -> . expression DIVIDE expression
    (54) expression -> . LOCALREC assign_list IN expression
    (55) expression -> . LIST LPAREN RPAREN
    (58) expression -> . LBRACKET expression_list RBRACKET
    (59) expression -> . ARRAY LPAREN expression_list RPAREN
    (60) expression -> . LPAREN expression RPAREN
    (61) expression -> . TRUE
    (62) expression -> . FALSE
    (63) expression -> . STRUCT BEGIN struct_body END
    (64) expression -> . LAMBDA ARROW expression
    (65) expression -> . LBRACKET RBRACKET
    (66) expression -> . ARRAY LPAREN RPAREN
    (67) expression -> . expression dots IDENTIFIER
    (68) expression -> . expression LPAREN expression_list RPAREN
    (69) expression -> . dots IDENTIFIER
    (70) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (71) expression -> . expression LPAREN RPAREN
    (72) expression -> . EXTEND expression BEGIN struct_body END
    (43) dots -> . DOT
    (44) dots -> . dots DOT

    FOR             shift and go to state 3
    PROC            shift and go to state 4
    WHILE           shift and go to state 6
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    STRING          shift and go to state 10
    LOOP            shift and go to state 11
    BEGIN           shift and go to state 12
    IDENTIFIER      shift and go to state 13
    NOT             shift and go to state 14
    IF              shift and go to state 15
    MINUS           shift and go to state 16
    LOCAL           shift and go to state 17
    LOCK            shift and go to state 18
    LIST            shift and go to state 19
    LAMBDA          shift and go to state 20
    LOCALREC        shift and go to state 21
    LBRACKET        shift and go to state 22
    ARRAY           shift and go to state 23
    LPAREN          shift and go to state 5
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    STRUCT          shift and go to state 26
    EXTEND          shift and go to state 28
    DOT             shift and go to state 29

    program                        shift and go to state 1
    expression                     shift and go to state 2
    dots                           shift and go to state 27

state 1

    (0) S' -> program .



state 2

    (12) program -> expression .
    (6) expression -> expression . LESS_THEN expression
    (7) expression -> expression . GREATER_THEN expression
    (8) expression -> expression . LESS_EQUALS expression
    (9) expression -> expression . GREATER_EQUALS expression
    (10) expression -> expression . EQUALS expression
    (11) expression -> expression . NOT_EQUALS expression
    (32) expression -> expression . AND expression
    (33) expression -> expression . NAND expression
    (34) expression -> expression . OR expression
    (35) expression -> expression . NOR expression
    (36) expression -> expression . XOR expression
    (37) expression -> expression . EQ expression
    (38) expression -> expression . NEQ expression
    (39) expression -> expression . IMPL expression
    (50) expression -> expression . PLUS expression
    (51) expression -> expression . MINUS expression
    (52) expression -> expression . TIMES expression
    (53) expression -> expression . DIVIDE expression
    (67) expression -> expression . dots IDENTIFIER
    (68) expression -> expression . LPAREN expression_list RPAREN
    (71) expression -> expression . LPAREN RPAREN
    (43) dots -> . DOT
    (44) dots -> . dots DOT

    $end            reduce using rule 12 (program -> expression .)
    LESS_THEN       shift and go to state 30
    GREATER_THEN    shift and go to state 31
    LESS_EQUALS     shift and go to state 32
    GREATER_EQUALS  shift and go to state 33
    EQUALS          shift and go to state 34
    NOT_EQUALS      shift and go to state 35
    AND             shift and go to state 36
    NAND            shift and go to state 37
    OR              shift and go to state 38
    NOR             shift and go to state 39
    XOR             shift and go to state 40
    EQ              shift and go to state 41
    NEQ             shift and go to state 42
    IMPL            shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 47
    LPAREN          shift and go to state 49
    DOT             shift and go to state 29

    dots                           shift and go to state 48

state 3

    (1) expression -> FOR . expression SEPARATOR expression SEPARATOR expression DO expression
    (1) expression -> . FOR expression SEPARATOR expression SEPARATOR expression DO expression
    (4) expression -> . PROC LPAREN identifier_list RPAREN identifier_list ARROW expression
    (5) expression -> . WHILE expression DO expression
    (6) expression -> . expression LESS_THEN expression
    (7) expression -> . expression GREATER_THEN expression
    (8) expression -> . expression LESS_EQUALS expression
    (9) expression -> . expression GREATER_EQUALS expression
    (10) expression -> . expression EQUALS expression
    (11) expression -> . expression NOT_EQUALS expression
    (13) expression -> . NUMBER
    (14) expression -> . FLOAT
    (15) expression -> . CHAR
    (16) expression -> . STRING
    (19) expression -> . LOOP expression DO expression
    (20) expression -> . PROC LPAREN RPAREN identifier_list ARROW expression
    (21) expression -> . BEGIN body END
    (22) expression -> . IDENTIFIER
    (23) expression -> . NOT expression
    (24) expression -> . IF expression THEN expression
    (27) expression -> . PROC LPAREN identifier_list RPAREN ARROW expression
    (30) expression -> . MINUS expression
    (31) expression -> . IDENTIFIER ASSIGN expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression NAND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression NOR expression
    (36) expression -> . expression XOR expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . expression IMPL expression
    (40) expression -> . IF expression THEN expression ELSE expression
    (41) expression -> . LOCAL assign_list IN expression
    (42) expression -> . LOCK identifier_list IN expression
    (45) expression -> . LIST LPAREN expression_list RPAREN
    (46) expression -> . LAMBDA LPAREN RPAREN ARROW expression
    (47) expression -> . LAMBDA identifier_list ARROW expression
    (48) expression -> . LAMBDA LPAREN identifier_list RPAREN ARROW expression
    (49) expression -> . PROC LPAREN RPAREN ARROW expression
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression TIMES expression
    (53) expression -> . expression DIVIDE expression
    (54) expression -> . LOCALREC assign_list IN expression
    (55) expression -> . LIST LPAREN RPAREN
    (58) expression -> . LBRACKET expression_list RBRACKET
    (59) expression -> . ARRAY LPAREN expression_list RPAREN
    (60) expression -> . LPAREN expression RPAREN
    (61) expression -> . TRUE
    (62) expression -> . FALSE
    (63) expression -> . STRUCT BEGIN struct_body END
    (64) expression -> . LAMBDA ARROW expression
    (65) expression -> . LBRACKET RBRACKET
    (66) expression -> . ARRAY LPAREN RPAREN
    (67) expression -> . expression dots IDENTIFIER
    (68) expression -> . expression LPAREN expression_list RPAREN
    (69) expression -> . dots IDENTIFIER
    (70) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (71) expression -> . expression LPAREN RPAREN
    (72) expression -> . EXTEND expression BEGIN struct_body END
    (43) dots -> . DOT
    (44) dots -> . dots DOT

    FOR             shift and go to state 3
    PROC            shift and go to state 4
    WHILE           shift and go to state 6
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    STRING          shift and go to state 10
    LOOP            shift and go to state 11
    BEGIN           shift and go to state 12
    IDENTIFIER      shift and go to state 13
    NOT             shift and go to state 14
    IF              shift and go to state 15
    MINUS           shift and go to state 16
    LOCAL           shift and go to state 17
    LOCK            shift and go to state 18
    LIST            shift and go to state 19
    LAMBDA          shift and go to state 20
    LOCALREC        shift and go to state 21
    LBRACKET        shift and go to state 22
    ARRAY           shift and go to state 23
    LPAREN          shift and go to state 5
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    STRUCT          shift and go to state 26
    EXTEND          shift and go to state 28
    DOT             shift and go to state 29

    expression                     shift and go to state 50
    dots                           shift and go to state 27

state 4

    (4) expression -> PROC . LPAREN identifier_list RPAREN identifier_list ARROW expression
    (20) expression -> PROC . LPAREN RPAREN identifier_list ARROW expression
    (27) expression -> PROC . LPAREN identifier_list RPAREN ARROW expression
    (49) expression -> PROC . LPAREN RPAREN ARROW expression

    LPAREN          shift and go to state 51


state 5

    (60) expression -> LPAREN . expression RPAREN
    (1) expression -> . FOR expression SEPARATOR expression SEPARATOR expression DO expression
    (4) expression -> . PROC LPAREN identifier_list RPAREN identifier_list ARROW expression
    (5) expression -> . WHILE expression DO expression
    (6) expression -> . expression LESS_THEN expression
    (7) expression -> . expression GREATER_THEN expression
    (8) expression -> . expression LESS_EQUALS expression
    (9) expression -> . expression GREATER_EQUALS expression
    (10) expression -> . expression EQUALS expression
    (11) expression -> . expression NOT_EQUALS expression
    (13) expression -> . NUMBER
    (14) expression -> . FLOAT
    (15) expression -> . CHAR
    (16) expression -> . STRING
    (19) expression -> . LOOP expression DO expression
    (20) expression -> . PROC LPAREN RPAREN identifier_list ARROW expression
    (21) expression -> . BEGIN body END
    (22) expression -> . IDENTIFIER
    (23) expression -> . NOT expression
    (24) expression -> . IF expression THEN expression
    (27) expression -> . PROC LPAREN identifier_list RPAREN ARROW expression
    (30) expression -> . MINUS expression
    (31) expression -> . IDENTIFIER ASSIGN expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression NAND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression NOR expression
    (36) expression -> . expression XOR expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . expression IMPL expression
    (40) expression -> . IF expression THEN expression ELSE expression
    (41) expression -> . LOCAL assign_list IN expression
    (42) expression -> . LOCK identifier_list IN expression
    (45) expression -> . LIST LPAREN expression_list RPAREN
    (46) expression -> . LAMBDA LPAREN RPAREN ARROW expression
    (47) expression -> . LAMBDA identifier_list ARROW expression
    (48) expression -> . LAMBDA LPAREN identifier_list RPAREN ARROW expression
    (49) expression -> . PROC LPAREN RPAREN ARROW expression
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression TIMES expression
    (53) expression -> . expression DIVIDE expression
    (54) expression -> . LOCALREC assign_list IN expression
    (55) expression -> . LIST LPAREN RPAREN
    (58) expression -> . LBRACKET expression_list RBRACKET
    (59) expression -> . ARRAY LPAREN expression_list RPAREN
    (60) expression -> . LPAREN expression RPAREN
    (61) expression -> . TRUE
    (62) expression -> . FALSE
    (63) expression -> . STRUCT BEGIN struct_body END
    (64) expression -> . LAMBDA ARROW expression
    (65) expression -> . LBRACKET RBRACKET
    (66) expression -> . ARRAY LPAREN RPAREN
    (67) expression -> . expression dots IDENTIFIER
    (68) expression -> . expression LPAREN expression_list RPAREN
    (69) expression -> . dots IDENTIFIER
    (70) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (71) expression -> . expression LPAREN RPAREN
    (72) expression -> . EXTEND expression BEGIN struct_body END
    (43) dots -> . DOT
    (44) dots -> . dots DOT

    FOR             shift and go to state 3
    PROC            shift and go to state 4
    WHILE           shift and go to state 6
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    STRING          shift and go to state 10
    LOOP            shift and go to state 11
    BEGIN           shift and go to state 12
    IDENTIFIER      shift and go to state 13
    NOT             shift and go to state 14
    IF              shift and go to state 15
    MINUS           shift and go to state 16
    LOCAL           shift and go to state 17
    LOCK            shift and go to state 18
    LIST            shift and go to state 19
    LAMBDA          shift and go to state 20
    LOCALREC        shift and go to state 21
    LBRACKET        shift and go to state 22
    ARRAY           shift and go to state 23
    LPAREN          shift and go to state 5
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    STRUCT          shift and go to state 26
    EXTEND          shift and go to state 28
    DOT             shift and go to state 29

    expression                     shift and go to state 52
    dots                           shift and go to state 27

state 6

    (5) expression -> WHILE . expression DO expression
    (1) expression -> . FOR expression SEPARATOR expression SEPARATOR expression DO expression
    (4) expression -> . PROC LPAREN identifier_list RPAREN identifier_list ARROW expression
    (5) expression -> . WHILE expression DO expression
    (6) expression -> . expression LESS_THEN expression
    (7) expression -> . expression GREATER_THEN expression
    (8) expression -> . expression LESS_EQUALS expression
    (9) expression -> . expression GREATER_EQUALS expression
    (10) expression -> . expression EQUALS expression
    (11) expression -> . expression NOT_EQUALS expression
    (13) expression -> . NUMBER
    (14) expression -> . FLOAT
    (15) expression -> . CHAR
    (16) expression -> . STRING
    (19) expression -> . LOOP expression DO expression
    (20) expression -> . PROC LPAREN RPAREN identifier_list ARROW expression
    (21) expression -> . BEGIN body END
    (22) expression -> . IDENTIFIER
    (23) expression -> . NOT expression
    (24) expression -> . IF expression THEN expression
    (27) expression -> . PROC LPAREN identifier_list RPAREN ARROW expression
    (30) expression -> . MINUS expression
    (31) expression -> . IDENTIFIER ASSIGN expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression NAND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression NOR expression
    (36) expression -> . expression XOR expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . expression IMPL expression
    (40) expression -> . IF expression THEN expression ELSE expression
    (41) expression -> . LOCAL assign_list IN expression
    (42) expression -> . LOCK identifier_list IN expression
    (45) expression -> . LIST LPAREN expression_list RPAREN
    (46) expression -> . LAMBDA LPAREN RPAREN ARROW expression
    (47) expression -> . LAMBDA identifier_list ARROW expression
    (48) expression -> . LAMBDA LPAREN identifier_list RPAREN ARROW expression
    (49) expression -> . PROC LPAREN RPAREN ARROW expression
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression TIMES expression
    (53) expression -> . expression DIVIDE expression
    (54) expression -> . LOCALREC assign_list IN expression
    (55) expression -> . LIST LPAREN RPAREN
    (58) expression -> . LBRACKET expression_list RBRACKET
    (59) expression -> . ARRAY LPAREN expression_list RPAREN
    (60) expression -> . LPAREN expression RPAREN
    (61) expression -> . TRUE
    (62) expression -> . FALSE
    (63) expression -> . STRUCT BEGIN struct_body END
    (64) expression -> . LAMBDA ARROW expression
    (65) expression -> . LBRACKET RBRACKET
    (66) expression -> . ARRAY LPAREN RPAREN
    (67) expression -> . expression dots IDENTIFIER
    (68) expression -> . expression LPAREN expression_list RPAREN
    (69) expression -> . dots IDENTIFIER
    (70) expression -> . IDENTIFIER LBRACKET expression RBRACKET
    (71) expression -> . expression LPAREN RPAREN
    (72) expression -> . EXTEND expression BEGIN struct_body END
    (43) dots -> . DOT
    (44) dots -> . dots DOT

    FOR             shift and go to state 3
    PROC            shift and go to state 4
    WHILE           shift and go to state 6
    NUMBER          shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    STRING          shift and go to state 10
    LOOP            shift and go to state 11
    BEGIN           shift and go to state 12
    IDENTIFIER      shift and go to state 13
    NOT             shift and go to state 14
    IF              shift and go to state 15
    MINUS           shift and go to state 16
    LOCAL           shift and go to state 17
    LOCK            shift and go to state 18
    LIST            shift and go to state 19
    LAMBDA          shift and go to state 20
    LOCALREC        shift and go to state 21
    LBRACKET        shift and go to state 22
    ARRAY           shift and go to state 23
    LPAREN          shift and go to state 5
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    STRUCT          shift and go to state 26
    EXTEND          shift and go to state 28
    DOT             shift and go to state 29

    expression                     shift and go to state 53
    dots                           shift and go to state 27

state 7

    (13) expression -> NUMBER .

    LESS_THEN       reduce using rule 13 (expression -> NUMBER .)
    GREATER_THEN    reduce using rule 13 (expression -> NUMBER .)
    LESS_EQUALS     reduce using rule 13 (expression -> NUMBER .)
    GREATER_EQUALS  reduce using rule 13 (expression -> NUMBER .)
    EQUALS          reduce using rule 13 (expression -> NUMBER .)
    NOT_EQUALS      reduce using rule 13 (expression -> NUMBER .)
    AND             reduce using rule 13 (expression -> NUMBER .)
    NAND            reduce using rule 13 (expression -> NUMBER .)
    OR              reduce using rule 13 (expression -> NUMBER .)
    NOR             reduce using rule 13 (expression -> NUMBER .)
    XOR             reduce using rule 13 (expression -> NUMBER .)
    EQ              reduce using rule 13 (expression -> NUMBER .)
    NEQ             reduce using rule 13 (expression -> NUMBER .)
    IMPL            reduce using rule 13 (expression -> NUMBER .)
    PLUS            reduce using rule 13 (expression -> NUMBER .)
    MINUS           reduce using rule 13 (expression -> NUMBER .)
    TIMES           reduce using rule 13 (expression -> NUMBER .)
    DIVIDE          reduce using rule 13 (expression -> NUMBER .)
    LPAREN          reduce using rule 13 (expression -> NUMBER .)
    DOT             reduce using rule 13 (expression -> NUMBER .)
    $end            reduce using rule 13 (expression -> NUMBER .)
    SEPARATOR       reduce using rule 13 (expression -> NUMBER .)
    RPAREN          reduce using rule 13 (expression -> NUMBER .)
    DO              reduce using rule 13 (expression -> NUMBER .)
    END             reduce using rule 13 (expression -> NUMBER .)
    THEN            reduce using rule 13 (expression -> NUMBER .)
    COMMA           reduce using rule 13 (expression -> NUMBER .)
    RBRACKET        reduce using rule 13 (expression -> NUMBER .)
    BEGIN           reduce using rule 13 (expression -> NUMBER .)
    ELSE            reduce using rule 13 (expression -> NUMBER .)
    IN              reduce using rule 13 (expression -> NUMBER .)


state 8

    (14) expression -> FLOAT .

    LESS_THEN       reduce using rule 14 (expression -> FLOAT .)
    GREATER_THEN    reduce using rule 14 (expression -> FLOAT .)
    LESS_EQUALS     reduce using rule 14 (expression -> FLOAT .)
    GREATER_EQUALS  reduce using rule 14 (expression -> FLOAT .)
    EQUALS          reduce using rule 14 (expression -> FLOAT .)
    NOT_EQUALS      reduce using rule 14 (expression -> FLOAT .)
    AND             reduce using rule 14 (expression -> FLOAT .)
    NAND            reduce using rule 14 (expression -> FLOAT .)
    OR              reduce using rule 14 (expression -> FLOAT .)
    NOR             reduce using rule 14 (expression -> FLOAT .)
    XOR             reduce using rule 14 (expression -> FLOAT .)
    EQ              reduce using rule 14 (expression -> FLOAT .)
    NEQ             reduce using rule 14 (expression -> FLOAT .)
    IMPL            reduce using rule 14 (expression -> FLOAT .)
    PLUS            reduce using rule 14 (expression -> FLOAT .)
    MINUS           reduce using rule 14 (expression -> FLOAT .)
    TIMES           reduce using rule 14 (expression -> FLOAT .)
    DIVIDE          reduce using rule 14 (expression -> FLOAT .)
    LPAREN          reduce using rule 14 (expression -> FLOAT .)
    DOT             reduce using rule 14 (expression -> FLOAT .)
    $end            reduce using rule 14 (expression -> FLOAT .)
    SEPARATOR       reduce using rule 14 (expression -> FLOAT .)
    RPAREN          reduce using rule 14 (expression -> FLOAT .)
    DO              reduce using rule 14 (expression -> FLOAT .)
    END             reduce using rule 14 (expression -> FLOAT .)
    THEN            reduce using rule 14 (expression -> FLOAT .)
    COMMA           reduce using rule 14 (expression -> FLOAT .)
    RBRACKET        reduce using rule 14 (expression -> FLOAT .)
    BEGIN           reduce using rule 14 (expression -> FLOAT .)
    ELSE            reduce using rule 14 (expression -> FLOAT .)
    IN              reduce using rule 14 (expression -> FLOAT .)


state 9

    (15) expression -> CHAR .

    LESS_THEN       reduce using rule 15 (expression -> CHAR .)
    GREATER_THEN    reduce using rule 15 (expression -> CHAR .)
    LESS_EQUALS     reduce using rule 15 (expression -> CHAR .)
    GREATER_EQUALS  reduce using rule 15 (expression -> CHAR .)
    EQUALS          reduce using rule 15 (expression -> CHAR .)
    NOT_EQUALS      reduce using rule 15 (expression -> CHAR .)
    AND             reduce using rule 15 (expression -> CHAR .)
    NAND            reduce using rule 15 (expression -> CHAR .)
    OR              reduce using rule 15 (expression -> CHAR .)
    NOR             reduce using rule 15 (expression -> CHAR .)
    XOR             reduce using rule 15 (expression -> CHAR .)
    EQ              reduce using rule 15 (expression -> CHAR .)
    NEQ             reduce using rule 15 (expression -> CHAR .)
    IMPL            reduce using rule 15 (expression -> CHAR .)
    PLUS            reduce using rule 15 (expression -> CHAR .)
    MINUS           reduce using rule 15 (expression -> CHAR .)
    TIMES           reduce using rule 15 (expression -> CHAR .)
    DIVIDE          reduce using rule 15 (expression -> CHAR .)
    LPAREN          reduce using rule 15 (expression -> CHAR .)
    DOT             reduce using rule 15 (expression -> CHAR .)
    $end            reduce using rule 15 (expression -> CHAR .)
    SEPARATOR       reduce using rule 15 (expression -> CHAR .)
    RPAREN          reduce using rule 15 (expression -> CHAR .)
    DO              reduce using rule 15 (expression -> CHAR .)
    END             reduce using rule 15 (expression -> CHAR .)
    THEN            reduce using rule 15 (expression -> CHAR .)
    COMMA           reduce using rule 15 (expression -> CHAR .)
    RBRACKET        reduce using rule 15 (expression -> CHAR .)
    BEGIN           reduce using rule 15 (expression -> CHAR .)
    ELSE            reduce using rule 15 (expression -> CHAR .)
    IN              reduce using rule 15 (expression -> CHAR .)


state 10

    (16) expression -> STRING .

    LESS_THEN       reduce using rule 16 (expression -> STRING .)
    GREATER_THEN    reduce using rule 16 (expression -> STRING .)
    LESS_EQUALS     reduce using rule 16 (expression -> STRING .)
    GREATER_EQUALS  reduce using rule 16 (expression -> STRING .)
    EQUALS          reduce using rule 16 (expression -> STRING .)
    NOT_EQUALS      reduce using rule 16 (expression -> STRING .)
    AND             reduce using rule 16 (expression -> STRING .)
    NAND            reduce using rule 16 (expression -> STRING .)
    OR              reduce using rule 16 (expression -> STRING .)
    NOR             reduce using rule 16 (expression -> STRING .)
    XOR             reduce using rule 16 (expression -> STRING .)
    EQ              reduce using rule 16 (expression -> STRING .)
    NEQ             reduce using rule 16 (expression -> STRING .)
    IMPL            reduce using rule 16 (expression -> STRING .)
    PLUS            reduce using rule 16 (expression -> STRING .)
    MINUS           reduce using rule 16 (expression -> STRING .)
    TIMES           reduce using rule 16 (expression -> STRING .)
    DIVIDE          reduce using rule 16 (expression -> STRING .)
    LPAREN          reduce using rule 16 (expression -> STRING .)
    DOT             reduce using rule 16 (expression -> STRING .)
    $end            reduce using rule 16 (expression -> STRING .)
    SEPARATOR       reduce using rule 16 (expression -> STRING .)
    RPAREN          reduce using rule 16 (expression -> STRING .)
    DO              reduce using rule 16 (expression -> STRING .)
    END             reduce using rule 16 (expression -> STRING .)
    THEN            reduce using rule 16 (expression -> STRING .)
    COMMA           reduce using rule 16 (expression -> STRING .)
    RBRACKET        reduce using rule 16 (expression -> STRING .)
    BEGIN           reduce using rule 16 (expression -> STRING .)
    ELSE            reduce using rule 16 (expression -> STRING .)
    IN              reduce using rule 16 (expression -> STRING .)


state 11
